# markovict

./: README.md  markovict.py  pyproject.toml
