[tool.poetry]
name = "markovict"
version = "0.1.0"
description = ""
authors = ["Ryan Gonzalez <rymg19@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
markovify = "^0.7.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
markovict = "markovict:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
